--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -18,7 +18,7 @@ main {}
     height: 100%; 
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 780px) {
     .blog-container {
         padding-left: 0;
         padding-right: 0;
